kubernetes/projekt-1/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 2
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: index-html-file

      volumes:
        - name: index-html-file
          configMap:
            name: api-cm
            items:
              - key: index.file
                path: index.html
