kubernetes/projekt-1/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: test-html-file
        resources:
          requests:
            memory: 64Mi
            cpu: 125m
          limits:
            memory: 128Mi
            cpu: 250m

      volumes:
        - name: test-html-file
          configMap:
            name: frontend-cm
            items:
              - key: test.file
                path: test.html
              - key: index.file
                path: index.html
