kubernetes/projekt-1/frontend_v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
spec:
  selector:
    matchLabels:
      app: frontend-v2
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend-v2
    spec:
      containers:
      - name: frontend
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: index-html-file

      volumes:
        - name: index-html-file
          configMap:
            name: frontend-v2-cm
            items:
              - key: index.file
                path: index.html
              - key: v2.file
                path: v2/index.html
