kubernetes/projekt-1/pod-with-init-container.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    version: v1
  name: pod-with-init
spec:
  containers:
  - name: main
    image: nginx
    imagePullPolicy: IfNotPresent
