kubernetes/projekt-1/frontend_v2_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2-service
spec:
  type: NodePort
  selector:
    app: frontend-v2
  ports:
  - protocol: TCP
    port: 81
    targetPort: 80
