kubernetes/projekt-1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
    - host: localhost
      http:
        paths:
          - path: /v2/
            pathType: Prefix
            backend:
              service:
                name: frontend-v2-service
                port:
                  number: 81
